--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,24 +1,28 @@
 <% include layouts/header.ejs %>
 
+<% if(messages.error) { %>
+  <h5 class= 'text-center font-italic font-weight-light text-danger border border-danger border-left-0 border-right-0'><%- messages.error %></h5>
+<% } %>
+
     <div class="container justify-content-center">
         <form method="POST">
             <div class="form-group">
               <label for="email">Email address</label>
-              <input type="email" name= "email" class="form-control" id="email" aria-describedby="emailHelp" value=" <%= data.email %>">
+              <input type="email" name= "email" class="form-control" id="email" aria-describedby="emailHelp" value=" <%= email %>">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="first_name">First name</label>
-              <input type="text" name= "first_name" class="form-control" id="first_name" value="<%= data.first_name %>">
+              <input type="text" name= "first_name" class="form-control" id="first_name" value="<%= first_name %>">
             </div>
             <div class="form-group">
                 <label for="second_name">Second name</label>
-                <input type="text" name= "second_name" class="form-control" id="second_name" value="<%= data.second_name %>">
+                <input type="text" name= "second_name" class="form-control" id="second_name" value="<%= second_name %>">
               </div>
             
             <div class="form-group">
               <label for="bio">Bio</label>
-              <textarea class="form-control" name="bio" id="bio" rows="3"><%= data.bio %></textarea>
+              <textarea class="form-control" name="bio" id="bio" rows="3"><%= bio %></textarea>
               <small id="textareaHelp" class="form-text text-muted">Tell us more about you! Your hobbies, skills, etc..</small>
             </div>
             <!-- <div class="form-group">
