Edit/delete confirmation

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,7 +16,7 @@
                               <nav class="navbar navbar-light bg-faded">
                                   <div class="inline">
                                       <a href= "/delete/<%= data[i].id %>">
-                                        <button class="btn btn-outline-danger" type="button" >Delete</button>
+                                        <button class="btn btn-outline-danger" type="button" id="delBtn" >Delete</button>
                                       </a>
                                      <a href= "/edit/<%= data[i].id %>">
                                         <button class="btn btn-sm align-middle btn-outline-secondary" type="button" >Edit profile</button>
