--- a/views/add.ejs
+++ b/views/add.ejs
@@ -25,11 +25,11 @@
               <textarea class="form-control" name="bio" id="bio" rows="3"> <%= bio %></textarea>
               <small id="textareaHelp" class="form-text text-muted">Tell us more about you! Your hobbies, skills, etc..</small>
             </div>
-            <!-- <div class="form-group">
+            <div class="form-group">
               <label for="image">Image input</label>
               <input type="file" class="form-control-file" id="image" aria-describedby="fileHelp">
               <small id="fileHelp" class="form-text text-muted">Please select an image wich will represent you.</small>
-            </div> -->
+            </div>
             
             <button type="submit" class="btn btn-secondary mt-2 mb-4">Submit</button>
           </form>
