--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -7,10 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <!-- jQuery CDN -->
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
     
     <!--  My stylesheet and JavaScript script  -->
     <link rel="stylesheet" href="/assets/style.css" type="text/css" />
-    <script href="/assets/script.js"></script>
+    <script src="/assets/script.js"></script>
 
     <title><%= title %></title>
   </head>
